--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
         "@intutable/http": "^0.2.0",
         "@intutable/http-cors": "^0.1.0",
         "@intutable/lazy-views": "^7.0.0",
+        "@intutable/process-manager": "file:../process-manager",
         "@intutable/project-management": "^3.0.0",
         "@intutable/user-authentication": "^3.0.0",
         "@intutable/user-permissions": "^0.5.0",
         "concurrently": "^7.3.0",
         "date-fns": "^2.29.1",
         "next": "^12.3.4",
-        "typescript": "^4.6.3"
+        "typescript": "^4.6.3",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/jest": "^27.4.1",
