--- a/gui/package.json
+++ b/gui/package.json
@@ -22,6 +22,7 @@
         "@emotion/react": "^11.9.0",
         "@emotion/server": "^11.4.0",
         "@emotion/styled": "^11.8.1",
+        "@intutable/process-manager": "^1.0.0",
         "@mui/base": "^5.0.0-alpha.76",
         "@mui/icons-material": "^5.6.1",
         "@mui/lab": "^5.0.0-alpha.77",
@@ -42,7 +43,8 @@
         "react-dnd-html5-backend": "^16.0.0",
         "react-dom": "^18.0.0",
         "swr": "^2.0.3",
-        "tmp": "^0.2.1"
+        "tmp": "^0.2.1",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@mui/codemod": "^5.8.5",
@@ -53,6 +55,7 @@
         "@types/node": "^17.0.24",
         "@types/react": "^18.0.5",
         "@types/tmp": "^0.2.3",
+        "@types/uuid": "^9.0.1",
         "ts-loader": "^9.3.1"
     }
 }
