--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "@intutable/http": "^0.2.0",
         "@intutable/http-cors": "^0.1.0",
         "@intutable/lazy-views": "^7.0.0",
-        "@intutable/process-manager": "^1.0.0",
+        "@intutable/mail-plugin": "^1.0.0",
+        "@intutable/process-manager": "^1.0.2",
         "@intutable/project-management": "^3.0.0",
         "@intutable/user-authentication": "^3.0.0",
         "@intutable/user-permissions": "^0.5.0",
