--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     },
     "devDependencies": {
         "@types/jest": "^27.4.1",
+        "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^5.10.2",
         "cross-env": "^7.0.3",
         "eslint": "^8.18.0",
