--- a/gui/tsconfig.json
+++ b/gui/tsconfig.json
@@ -23,7 +23,7 @@
             "@datagrid/*": ["components/DataGrid/*"]
         }
     },
-    "include": ["src", "next-env.d.ts"],
+    "include": ["src", "next-env.d.ts", "public/release-notes/*"],
     "exclude": [
         "node_modules",
         "backend",
