--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dekanat-app",
-    "version": "1.1.1-alpha.1",
+    "version": "1.2.0",
     "private": true,
     "workspaces": [
         "shared",
