chore: update dependabot.yml to include labels when opening a PR

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,6 @@ updates:
       day: "sunday"
       time: "22:00"
       timezone: "Europe/Berlin"
+    labels:
+      - "type: housekeeping"
+      - "priority: medium"
