--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "scripts": {
         "db:start": "docker-compose start dekanat-database",
         "docs:open": "mdbook serve ./docs --open",
+        "docs:test": "mdbook test ./docs",
         "prepare": "husky install",
         "lint": "npm run lint --workspaces --if-present -- --cache",
         "format": "npm run format --workspaces --if-present -- --cache --fix"
