chore(system-plugin): reference to user-permissions in tsconfig

--- a/libs/plugins/system-plugin/tsconfig.json
+++ b/libs/plugins/system-plugin/tsconfig.json
@@ -10,5 +10,6 @@
   "references": [
     { "path": "../../core" },
     { "path": "../project-management" },
+    { "path": "../user-permissions" },
   ]
 }
